alpm-db/tests/parse_errors/unterminated_section.desc
%NAME
foo

%VERSION%
1.0.0-1
